fix screenshot overflow tray (bug 1033569)

--- a/src/media/css/preview_tray.styl
+++ b/src/media/css/preview_tray.styl
@@ -7,7 +7,7 @@
     overflow: hidden;
     padding: 21px 0 0;
     position: relative;
-    width: 900px;
+    width: 100%;
 
     .slider {
         margin-top: 15px;
